# aorist

./: .dockerignore  .drone.yml  .gitignore  Cargo.toml  Dockerfile  Dockerfile.ci  LICENSE  MANIFEST.in  README.md  attributes.yaml  autopep.sh  basic.yaml  build-wheels.sh  build.rs  build.sh  build_docker.sh  build_for_testing.py  clean.sh  common.py  create_secrets.sh  dag.py  docker-build-wheels.sh  docker-build.sh  docker-ci-build.sh  entrypoint.py  example.py  gen_yaml.py  kamus.yaml  meta.yaml  other_constraints.yaml  plot_constrainables.R  plot_dag.sh  preamble.R  programs.yaml  programs_to_recipes.py  py_helpers.py  pyproject.toml  run.sh  sentinel.yaml  setup.py  (+6 more)
aorist/: Cargo.toml  README.md  __init__.py  meta.yaml  pyproject.toml  setup.py
aorist/aorist/: __init__.py
aorist/conda-build-recipe/: building-file-script.md  quick-guide-conda-build.md
aorist/src/: lib.rs
aorist_ast/: Cargo.toml
aorist_ast/src/: ancestor_record.rs  assignment_target.rs  extract_arg.rs  lib.rs  string_literal.rs
aorist_attributes/: Cargo.toml  attributes.yaml  build.rs
aorist_attributes/src/: attributes.rs  lib.rs  python.rs
aorist_concept/: Cargo.toml
aorist_concept/src/: builder.rs  builder_enum.rs  concept_builder.rs  enum_builder.rs  lib.rs  struct_builder.rs  type_variants.rs  util.rs
aorist_constraint/: Cargo.toml  all_constraints.yaml  build.rs  constraints.yaml  old_constraints.yaml  test.py
aorist_constraint/src/: constraint.rs  lib.rs  python.rs
aorist_core/: Cargo.toml  aorist.toml  build.rs  refactor.sh
aorist_core/src/: ancestor_record.rs  attributes.rs  context.rs  driver.rs  lib.rs  object.rs  parameter_tuple.rs  predicate.rs  program.rs  task_name_shortener.rs
aorist_core/src/access_policy/: access_policy.rs  approve_access_selector.rs
aorist_core/src/algorithms/: regression.rs
aorist_core/src/asset/: asset.rs  derived_asset.rs  fasttext_embedding.rs  geospatial_asset.rs  graph_asset.rs  grid_perspective_transform_asset.rs  image_corpora_homography.rs  image_corpora_knn_match.rs  image_corpus.rs  image_corpus_key_points.rs  language_asset.rs  mlp_asset.rs  mod.rs  named_entities.rs  point_cloud_asset.rs  point_cloud_info_asset.rs  point_cloud_metadata_asset.rs  polygon_asset.rs  polygon_collection_asset.rs  polygon_intersection_asset.rs  raster_asset.rs  simple_undirected_graph_asset.rs  spacy_named_entities.rs  static_data_table.rs  supervised_model.rs  text_corpus.rs  vision_asset.rs
aorist_core/src/code/: code_block.rs  mod.rs  preamble.rs
aorist_core/src/compliance/: mod.rs
aorist_core/src/compression/: bzip2_compression.rs  data_compression.rs  gzip_compression.rs  laz_compression.rs  mod.rs  zip_compression.rs
aorist_core/src/concept/: mod.rs
aorist_core/src/constraint/: mod.rs
aorist_core/src/constraint_block/: mod.rs
aorist_core/src/constraint_state/: mod.rs
aorist_core/src/data_setup/: mod.rs  universe.rs
aorist_core/src/dataset/: dataset.rs
aorist_core/src/dialect/: mod.rs
aorist_core/src/driver/: driver.rs  mod.rs  python.rs  r.rs
aorist_core/src/encoding/: csv_encoding.rs  encoding.rs  gdb_encoding.rs  geotiff_encoding.rs  gpkg_encoding.rs  json_encoding.rs  kml_encoding.rs  las_encoding.rs  mod.rs  onnx_encoding.rs  orc_encoding.rs  shapefile_encoding.rs  sqlite_encoding.rs  tiff_encoding.rs  tsv_encoding.rs  wkt_encoding.rs  xml_encoding.rs
aorist_core/src/endpoints/: alluxio.rs  aws.rs  gcp.rs  gitea.rs  minio.rs  mod.rs  postgres.rs  presto.rs  ranger.rs
aorist_core/src/error/: mod.rs
aorist_core/src/features/: mod.rs  objective.rs
aorist_core/src/flow/: airflow_python_based_flow.rs  etl_flow.rs  flow_builder.rs  flow_builder_input.rs  jupyter_python_based_flow.rs  mod.rs  native_python_based_flow.rs  native_r_based_flow.rs  prefect_python_based_flow.rs  python_based_flow.rs  python_based_flow_builder.rs  r_based_flow_builder.rs  task.rs
aorist_core/src/header/: csv_header.rs  file_header.rs  mod.rs
aorist_core/src/layout/: api_layout.rs  api_or_file_layout.rs  file_based_storage_layout.rs  mod.rs  (+1 more)
aorist_derive/: Cargo.toml
aorist_derive/src/: lib.rs
aorist_primitives/: Cargo.toml
aorist_primitives/src/: concept.rs  constraint.rs  context.rs  dialect.rs  error.rs  lib.rs  program.rs
aorist_recipes/: Cargo.toml  MANIFEST.in  __init__.py  build.rs  convert_json_table_to_orc_table.presto.sql  convert_json_to_csv.py  fasttext_training_data.py  meta.yaml  programs.yaml  setup.py  train_fasttext_model.py  upload_data_to_minio.py
aorist_recipes/aorist_recipes/: __init__.py  convert_json_to_csv.py  download_data_from_remote_gcs_location.py  download_data_from_remote_pushshift_api_location_to_newline_delimited_json.py  download_data_from_remote_web_location.R  extract_named_entities_using_spacy.py  fasttext_training_data.py  fasttext_training_data_from_sqlite.py  orc_table_schemas_created.presto.sql  text_corpus_data_from_hive.py  text_corpus_data_from_sqlite.py  train_fasttext_model.py  upload_data_to_sqlite.py  upload_fasttext_to_minio.py  upload_fasttext_to_sqlite.py  upload_spacy_ner_to_sqlite.py
aorist_recipes/src/: lib.rs
aorist_util/: Cargo.toml
aorist_util/src/: constraint.rs  core_structures.rs  error.rs  lib.rs
constraint_module/: Cargo.toml  build.rs
constraint_module/src/: lib.rs
gitea/: Cargo.toml
gitea/src/: lib.rs
gitea/tests/: version.rs
ranger/: Cargo.toml
ranger/src/: lib.rs
scienz/: Cargo.toml  MANIFEST.in  aorist.toml  meta.yaml
scienz/covid/: ECDC_covid.py  azure_covid.py  nyt_covid.py  old_nyt_covid.py  racial_covid_data_tracker.py  statsnz_covid.py  who_covid.py
scienz/scienz/: __init__.py  local_subreddits.py  sports.py  subreddits.json  subreddits.py
scienz/sport/: __init__.py  bundesliga.py  english_premier_league_old.py  int_1800_football.py  mls_usa.py  mls_usa_old.py  nba_2020_pbp.py  nfl_2020_pbp.py
scienz/sports/: bundesliga.py  nba_2020_pbp.py  nfl_2020_pbp.py  nfl_weather.py
scienz/src/: attributes.rs  lib.rs  predicate.rs
type_macro_helpers/: Cargo.toml
type_macro_helpers/src/: lib.rs
type_macro_helpers/tests/: test.rs
(+802 files in other folders)
