[package]
name = "aorist"
description = "Dataorist."
version = "0.0.1"
edition = "2018"
repository = "https://github.com/scie-nz/aorist"
license = "MIT"
keywords = ["etl"]
build = "build.rs"
authors = [
  "Bogdan State <bogdan@scie.nz>",
]

[features]
map_first_last = []
rustfmt = []
cargo-fmt = []
trace_macros = []
# Allow disabling the "extension-module" feature for tests.
# TESTS MUST BE RUN AS: cargo test --no-default-features
# see also: https://github.com/PyO3/pyo3/issues/341
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[lib]
name = "aorist"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
Inflector = "0.11.4"
anyhow = "1.0"
aorist_ast = {path = "./aorist_ast"}
aorist_core = {path = "./aorist_core"}
aorist_concept = {path = "./aorist_concept"}
aorist_derive = {path = "./aorist_derive"}
aorist_primitives = {path = "./aorist_primitives"}
base64 = "0.13.0"
derivative = "2.1.1"
enum_dispatch = "0.3.5"
git-testament = "0.1"
hyphenation = "0.8.0"
indoc = "1.0.3"
linked-hash-map = "0.5.3"
linked_hash_set = "0.1.4"
maplit = "1.0.2"
num = {version="0.4.0", features = ["std"]}
ordered-float = "2.1.1"
paste = {git = "https://github.com/scie-nz/paste", branch = "main"}
pyo3 = {version = "0.13.2", features=["auto-initialize"]}
rand = "^0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "^1.0"
serde_yaml = "0.8"
siphasher = "0.3"
sqlformat = "0.1.5"
sqlparser = "0.9.0"
textwrap = {version = "0.13.2", features = ["hyphenation"]}
thiserror = "^1.0"
tracing = "0.1"
tracing-attributes = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.2"
uuid = {version = "0.8.1", features = ["v4", "serde"]}
libc = "0.2.93"
# workaround for failure to build on ARM
# switch back to upstream once a release with this PR is published: https://github.com/extendr/extendr/pull/213
extendr-api = {git = "https://github.com/nickbp/extendr", branch = "master"}
extendr-engine = {git = "https://github.com/nickbp/extendr", branch = "master"}

[build-dependencies]
Inflector = "0.11.4"
aorist_primitives = {path = "./aorist_primitives"}
aorist_util = {path = "./aorist_util"}
codegen = "0.1.3"
indoc = "1.0.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
libR-sys = { version = "0.2.0", features = ["use-bindgen"] } # enable bindgen to avoid errors like "Cannot find libR-sys bindings file"
bindgen = "0.53.2" # should align with the bindgen version used by libR-sys

[package.metadata.maturin]
requires-dist = ["astor==0.8.1", "black==20.8b1"]
