[workspace]

members = [
    "aorist_util",
    "aorist_primitives",
    "aorist_derive",
    "aorist_concept",
    "aorist_ast",
    "aorist_attributes",
    "aorist_core",
    "aorist"
]
default-members = ["aorist"]
[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic

