[package]
name = "aorist"
description = "Cdylib for aorist project. Can be accessed from Python."
license = "MIT"
version = "0.0.12"
authors = ["Bogdan State <bogdan@scie.nz>"]
edition = "2018"
homepage = "https://aorist.io"
readme = "README.md"
repository = "https://github.com/scie-nz/aorist"

[lib]
name = "aorist"
path = "src/lib.rs"
crate-type = ["cdylib"]

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
aorist_constraint = {path = "../aorist_constraint", features=["python"], version = "0.0.12"}
aorist_attributes = {path = "../aorist_attributes", features=["python"], version = "0.0.12"}
aorist_primitives = {path = "../aorist_primitives", features=[], version = "0.0.12"}
aorist_core = {path = "../aorist_core", features=["python"], version = "0.0.12"}
aorist_util = {path = "../aorist_util", version = "0.0.1"}
maplit = "1.0.2"
aorist_paste = {version = "0.0.1"}
uuid = {version = "0.8.1", features = ["v4", "serde"]}
anyhow = "1.0"
pyo3 = {version = "0.13.2", features=["auto-initialize"]}
