[package]
name = "aorist"
description = "Cdylib for aorist project. Can be accessed from Python."
license = "MIT"
version = "0.0.14"
authors = ["Bogdan State <bogdan@scie.nz>"]
edition = "2018"
homepage = "https://aorist.io"
readme = "README.md"
repository = "https://github.com/scie-nz/aorist"
build = "build.rs"

[lib]
name = "aorist"
path = "src/lib.rs"
crate-type = ["cdylib"]

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
aorist_constraint = {path = "../aorist_constraint", features=["python"]}
aorist_attributes = {path = "../aorist_attributes", features=["python"]}
aorist_primitives = {path = "../aorist_primitives", features=[]}
aorist_core = {path = "../aorist_core", features=["python"]}
aorist_util = {path = "../aorist_util"}
maplit = "1.0.2"
aorist_paste = {version = "0.0.1"}
uuid = {version = "0.8.1", features = ["v4", "serde"]}
anyhow = "1.0"
pyo3 = {version = "0.14.3", features=["auto-initialize", "multiple-pymethods"], optional = true}

[build-dependencies]
pyo3-build-config = "0.14.3"
