[package]
name = "aorist_ast"
version = "0.1.0"
authors = ["Bogdan State <bogdan@scie.nz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aorist_concept = {path = "../aorist_concept"}
aorist_derive = {path = "../aorist_derive"}
aorist_primitives = {path = "../aorist_primitives"}
extendr-api = {git = "https://github.com/nickbp/extendr", branch = "master"}
Inflector = "0.11.4"
linked-hash-map = "0.5.3"
pyo3 = {version = "0.13.2", features=["auto-initialize"]}
uuid = {version = "0.8.1", features = ["v4", "serde"]}
