[package]
name = "aorist_ast"
description = "This crate provides AST (Abstract Syntax Tree) building blocks for the aorist project."
license = "MIT"
version = "0.0.14"
authors = ["Bogdan State <bogdan@scie.nz>"]
edition = "2018"
homepage = "https://aorist.io"
readme = false
repository = "https://github.com/scie-nz/aorist"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi_stable = "0.10.3"
aorist_concept = {path = "../aorist_concept", version = "0.0.1"}
aorist_derive = {path = "../aorist_derive", version = "0.0.1"}
aorist_primitives = {path = "../aorist_primitives", features = ["python"], version = "0.0.14"}
aorist_attributes = {path = "../aorist_attributes", features = ["python"], version = "0.0.14"}
# workaround for failure to build on ARM on 0.2.0
# switch back to upstream once a >0.2.0 release with this commit is published: https://github.com/extendr/extendr/commit/da8c95c
aorist_extendr-api = "0.0.1"
Inflector = "0.11.4"
linked-hash-map = "0.5.3"
pyo3 = {version = "0.15.1", features=["auto-initialize", "multiple-pymethods"]}
uuid = {version = "0.8.1", features = ["v4", "serde"]}
tracing = "0.1"
