[package]
name = "aorist_attributes"
version = "0.1.0"
authors = ["Bogdan State <bogdan@scie.nz>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aorist_derive = {path = "../aorist_derive"}
aorist_primitives = {path = "../aorist_primitives"}
serde = { version = "1.0", features = ["derive"] }
# uuid = {version = "0.8.1", features = ["v4", "serde"]}
num = {version="0.4.0", features = ["std"]}
paste = {git = "https://github.com/scie-nz/paste", branch = "main"}
pyo3 = {version = "0.13.2", features=["auto-initialize"]}
sqlparser = "0.9.0"
indoc = "1.0.3"

[build-dependencies]
aorist_util = {path = "../aorist_util"}
codegen = "0.1.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
