[package]
name = "aorist_attributes"
version = "0.1.0"
authors = ["Bogdan State <bogdan@scie.nz>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
python = ["pyo3"]
r = ["extendr-api", "extendr-engine"]
sql = ["sqlformat", "sqlparser"]
default = ["python", "r", "sql"]

[dependencies]
aorist_concept = {path = "../aorist_concept"}
aorist_derive = {path = "../aorist_derive"}
aorist_util = {path = "../aorist_util"}
aorist_primitives = {path = "../aorist_primitives"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "^1.0"
# uuid = {version = "0.8.1", features = ["v4", "serde"]}
num = {version="0.4.0", features = ["std"]}
paste = {git = "https://github.com/scie-nz/paste", branch = "main"}
indoc = "1.0.3"
uuid = {version = "0.8.1", features = ["v4", "serde"]}
linked-hash-map = "0.5.3"
derivative = "2.1.1"
pyo3 = {version = "0.13.2", features=["auto-initialize"], optional = true}
extendr-api = {git = "https://github.com/extendr/extendr", rev = "da8c95c", optional = true}
extendr-engine = {git = "https://github.com/extendr/extendr", rev = "da8c95c", optional = true}
sqlformat = {version = "0.1.5", optional = true}
sqlparser = {version = "0.9.0", optional = true}
tracing = "0.1"


[build-dependencies]
aorist_util = {path = "../aorist_util"}
codegen = "0.1.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
cfg-if = "1.0.0"
pyo3 = {version = "0.13.2", features=["auto-initialize"], optional = true}
