[package]
name = "aorist_attributes"
description = "Definitions for various kinds of data attributes in the aorist project."
license = "MIT"
version = "0.0.14"
authors = ["Bogdan State <bogdan@scie.nz>"]
edition = "2018"
homepage = "https://aorist.io"
readme = false
repository = "https://github.com/scie-nz/aorist"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
python = ["pyo3", "aorist_primitives/python"]
r = ["aorist_extendr-api", "aorist_extendr-engine"]
sql = ["sqlformat", "sqlparser"]
default = ["python", "r", "sql"]

[dependencies]
abi_stable = "0.10.3"
aorist_concept = {path = "../aorist_concept", version = "0.0.1"}
aorist_derive = {path = "../aorist_derive", version = "0.0.1"}
aorist_util = {path = "../aorist_util", version = "0.0.1"}
aorist_primitives = {path = "../aorist_primitives", version = "0.0.14"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "^1.0"
num = {version="0.4.0", features = ["std"]}
aorist_paste = "0.0.1"
indoc = "1.0.3"
uuid = {version = "0.8.1", features = ["v4", "serde"]}
linked-hash-map = "0.5.3"
derivative = "2.1.1"
pyo3 = {version = "0.14.5", features=["auto-initialize", "multiple-pymethods"], optional = true}
aorist_extendr-api = {version = "0.0.1", optional = true}
aorist_extendr-engine = {version = "0.0.1", optional = true}
sqlformat = {version = "0.1.5", optional = true}
sqlparser = {version = "0.9.0", optional = true}
tracing = "0.1"

[build-dependencies]
aorist_util = {path = "../aorist_util", version = "0.0.1"}
codegen = "0.1.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
cfg-if = "1.0.0"
pyo3 = {version = "0.14.5", features=["auto-initialize", "multiple-pymethods"], optional = true}
