[package]
name = "aorist_concept"
description = "This crate provides the aorist macro, which creates a conceptual hierarchy in the aorist project"
license = "MIT"
version = "0.0.1"
authors = ["Bogdan State <bogdan@scie.nz>"]
edition = "2018"
homepage = "https://aorist.io"
readme = false
repository = "https://github.com/scie-nz/aorist"

[lib]
proc-macro = true

[dependencies]
abi_stable = "0.10.3"
aorist_primitives = {version = "0.0.14", path="../aorist_primitives", features=["python"]}
aorist_util = "0.0.1"
linked_hash_set = "0.1.4"
proc-macro2 = "1.0.25"
quote = "1"
pyo3 = "0.14.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
syn = {version = "1.0.52", features = ["full", "extra-traits", "printing"]}

[features]
log_syntax = []
trace_macros = []
rustfmt = []
