[package]
name = "aorist_concept"
description = "This crate provides the aorist macro, which creates a conceptual hierarchy in the aorist project"
license = "MIT"
version = "0.0.1"
authors = ["Bogdan State <bogdan@scie.nz>"]
edition = "2018"
homepage = "https://aorist.scie.nz"
readme = false
repository = "https://github.com/scie-nz/aorist"

[lib]
proc-macro = true

[dependencies]
abi_stable = "0.10.3"
linked_hash_set = "0.1.4"
proc-macro2 = "1.0.25"
quote = "1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
syn = {version = "1", features = ["full"]}
aorist_error = {path = "../aorist_error"}

[features]
log_syntax = []
trace_macros = []
rustfmt = []
