[package]
name = "aorist_constraint"
version = "0.1.0"
authors = ["Bogdan State <bogdan@scie.nz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
aorist_primitives = {path = "../aorist_primitives", features=[]}
aorist_core = {path = "../aorist_core", features=[]}
maplit = "1.0.2"
paste = {git = "https://github.com/scie-nz/paste", branch = "main"}
uuid = {version = "0.8.1", features = ["v4", "serde"]}
anyhow = "1.0"

[build-dependencies]
aorist_util = {path = "../aorist_util"}
codegen = "0.1.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
cfg-if = "1.0.0"
