[package]
name = "aorist_constraint"
version = "0.1.0"
authors = ["Bogdan State <bogdan@scie.nz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
python = ["pyo3", "pyo3/extension-module", "aorist_core/python"]
r = ["extendr-api", "extendr-engine"]
sql = ["sqlformat", "sqlparser"]

[lib]
name = "aorist_constraint"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
aorist_primitives = {path = "../aorist_primitives", features=[]}
aorist_ast = {path = "../aorist_ast", features=[]}
aorist_core = {path = "../aorist_core", features=[]}
aorist_util = {path = "../aorist_util"}
maplit = "1.0.2"
paste = {git = "https://github.com/scie-nz/paste", branch = "main"}
uuid = {version = "0.8.1", features = ["v4", "serde"]}
anyhow = "1.0"
pyo3 = {version = "0.13.2", features=["auto-initialize"], optional = true}
extendr-api = {git = "https://github.com/extendr/extendr", rev = "da8c95c", optional = true}
extendr-engine = {git = "https://github.com/extendr/extendr", rev = "da8c95c", optional = true}
sqlformat = {version = "0.1.5", optional = true}
sqlparser = {version = "0.9.0", optional = true}
linked-hash-map = "0.5.3"

[build-dependencies]
aorist_util = {path = "../aorist_util"}
codegen = "0.1.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
cfg-if = "1.0.0"
indoc = "1.0.3"
