[package]
name = "aorist_constraint"
description = "Example constraint crate for the aorist project"
license = "MIT"
version = "0.0.14"
authors = ["Bogdan State <bogdan@scie.nz>"]
edition = "2018"
homepage = "https://aorist.io"
readme = false
repository = "https://github.com/scie-nz/aorist"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
python = ["pyo3", "pyo3/extension-module", "aorist_core/python"]
r = ["aorist_extendr-api", "aorist_extendr-engine"]
sql = ["sqlformat", "sqlparser"]

[lib]
name = "aorist_constraint"
path = "src/lib.rs"

[dependencies]
abi_stable = "0.10.3"
serde = { version = "1.0", features = ["derive"] }
aorist_primitives = {path = "../aorist_primitives", features=[], version = "0.0.14"}
aorist_ast = {path = "../aorist_ast", features=[], version = "0.0.14"}
aorist_core = {path = "../aorist_core", features=[], version = "0.0.14"}
aorist_util = {path = "../aorist_util", version = "0.0.1"}
maplit = "1.0.2"
aorist_paste = "0.0.1"
uuid = {version = "0.8.1", features = ["v4", "serde"]}
anyhow = "1.0"
pyo3 = {version = "0.14.5", features=["auto-initialize", "multiple-pymethods"], optional = true}
aorist_extendr-api = {version = "0.0.1", optional = true}
aorist_extendr-engine = {version = "0.0.1", optional = true}
sqlformat = {version = "0.1.5", optional = true}
sqlparser = {version = "0.9.0", optional = true}
linked-hash-map = "0.5.3"
tracing = "0.1"
tracing-attributes = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.2"

[build-dependencies]
aorist_util = {path = "../aorist_util", version = "0.0.1"}
