[package]
name = "aorist_core"
version = "0.1.0"
authors = ["Bogdan State <bogdan@scie.nz>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "aorist_core"
path = "src/lib.rs"

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic

[features]
python = ["pyo3", "aorist_attributes/python"]
r = ["extendr-api", "extendr-engine"]
sql = ["sqlformat", "sqlparser"]

[dependencies]
Inflector = "0.11.4"
anyhow = "1.0"
aorist_ast = {path = "../aorist_ast"}
aorist_attributes = {path = "../aorist_attributes", features = ["python"]}
aorist_concept = {path = "../aorist_concept"}
aorist_derive = {path = "../aorist_derive"}
aorist_primitives = {path = "../aorist_primitives"}
base64 = "0.13.0"
derivative = "2.1.1"
enum_dispatch = "0.3.5"
linked-hash-map = "0.5.3"
linked_hash_set = "0.1.4"
num = {version="0.4.0", features = ["std"]}
ordered-float = "2.1.1"
paste = {git = "https://github.com/scie-nz/paste", branch = "main"}
rand = "^0.8"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "^1.0"
serde_yaml = "0.8"
siphasher = "0.3"
tracing = "0.1"
uuid = {version = "0.8.1", features = ["v4", "serde"]}
pyo3 = {version = "0.13.2", features=["auto-initialize"], optional = true}
extendr-api = {git = "https://github.com/extendr/extendr", rev = "da8c95c", optional = true}
extendr-engine = {git = "https://github.com/extendr/extendr", rev = "da8c95c", optional = true}
sqlformat = {version = "0.1.5", optional = true}
sqlparser = {version = "0.9.0", optional = true}
thiserror = "^1.0"

[build-dependencies]
toml = "0.5.8"
serde = { version = "1.0", features = ["derive"] }
codegen = "0.1.3"
