[package]
name = "aorist_derive"
description = "derive macros for the aorist project"
license = "MIT"
version = "0.0.1"
authors = ["Bogdan State <bogdan@scie.nz>"]
edition = "2018"
homepage = "https://aorist.scie.nz"
readme = false
repository = "https://github.com/scie-nz/aorist"

[lib]
name = "aorist_derive"
path = "src/lib.rs"
proc-macro = true

[dependencies]
abi_stable = "0.10.3"
quote = "1.0.7"
sqlparser = "0.9.0"
syn = "1.0.48"
aorist_util = "0.0.1"
