[package]
name = "aorist_primitives"
version = "0.1.0"
authors = ["Bogdan State <bogdan@scie.nz>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
aorist_derive = {path = "../aorist_derive"}
paste = {git = "https://github.com/scie-nz/paste", branch = "main"}
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
uuid = {version = "0.8.1", features = ["v4", "serde"]}
siphasher = "0.3"
tracing = "0.1"
pyo3 = {version = "0.13.2", features=["auto-initialize"], optional = true}

[features]
python = ["pyo3"]
