[package]
name = "aorist_primitives"
description = "Primitive macros for the aorist project."
license = "MIT"
version = "0.0.1"
authors = ["Bogdan State <bogdan@scie.nz>"]
edition = "2018"
homepage = "https://aorist.io"
readme = false
repository = "https://github.com/scie-nz/aorist"

[dependencies]
anyhow = "1.0"
aorist_derive = "0.0.1"
paste = {git = "https://github.com/scie-nz/paste", branch = "main"}
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
uuid = {version = "0.8.1", features = ["v4", "serde"]}
siphasher = "0.3"
tracing = "0.1"
pyo3 = {version = "0.13.2", features=["auto-initialize"], optional = true}

[features]
python = ["pyo3"]
