[package]
name = "aorist_primitives"
description = "Primitive macros for the aorist project."
license = "MIT"
version = "0.0.14"
authors = ["Bogdan State <bogdan@scie.nz>"]
edition = "2018"
homepage = "https://aorist.scie.nz"
readme = false
repository = "https://github.com/scie-nz/aorist"

[dependencies]
abi_stable = "0.10.3"
anyhow = "1.0"
aorist_derive = "0.0.1"
aorist_paste = "0.0.1"
aorist_util = {path = "../aorist_util", version = "0.0.1"}
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
uuid = {version = "0.8.1", features = ["v4", "serde"]}
siphasher = "0.3"
tracing = "0.1"
pyo3 = {version = "0.15.1", features=["auto-initialize", "multiple-pymethods"], optional = true}
thiserror = "^1.0"
syn = {version = "1.0.52", features = ["full", "extra-traits", "printing"]}

[features]
python = ["pyo3", "aorist_util/python"]
