[package]
name = "aorist_recipes"
version = "0.1.0"
authors = ["Bogdan State <bogdan@scie.nz>"]
edition = "2018"

[features]
python = ["pyo3"]
r = ["extendr-api", "extendr-engine", "bindgen", "libR-sys"]
sql = ["sqlformat", "sqlparser"]
default = ["python", "r", "sql"]

[dependencies]
aorist_core = {path = "../aorist_core", features=["python", "r", "sql"]}
aorist_concept = {path = "../aorist_concept"}
aorist_constraint = {path = "../aorist_constraint"}
aorist_derive = {path = "../aorist_derive"}
aorist_primitives = {path = "../aorist_primitives"}
serde = { version = "1.0", features = ["derive"] }
# uuid = {version = "0.8.1", features = ["v4", "serde"]}
num = {version="0.4.0", features = ["std"]}
paste = {git = "https://github.com/scie-nz/paste", branch = "main"}
hyphenation = "0.8.0"
indoc = "1.0.3"
uuid = {version = "0.8.1", features = ["v4", "serde"]}
linked-hash-map = "0.5.3"
derivative = "2.1.1"
pyo3 = {version = "0.13.2", features=["auto-initialize"], optional = true}
extendr-api = {git = "https://github.com/extendr/extendr", rev = "da8c95c", optional = true}
extendr-engine = {git = "https://github.com/extendr/extendr", rev = "da8c95c", optional = true}
sqlformat = {version = "0.1.5", optional = true}
sqlparser = {version = "0.9.0", optional = true}
aorist_attributes = {path = "../aorist_attributes", features=["python", "r", "sql"]}
anyhow = "1.0"
textwrap = {version = "0.13.2", features = ["hyphenation"]}

[build-dependencies]
indoc = "1.0.3"
Inflector = "0.11.4"
aorist_util = {path = "../aorist_util"}
codegen = "0.1.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
cfg-if = "1.0.0"
libR-sys = { version = "0.2.0", features = ["use-bindgen"], optional = true } # enable bindgen to avoid errors like "Cannot find libR-sys bindings file"
bindgen = { version = "0.53.2", optional = true } # should align with the bindgen version used by libR-sys
