[package]
name = "constraint_module"
version = "0.1.0"
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi_stable = "0.10.3"
aorist_core = {path = "../aorist_core", features=["python"]}
pyo3 = {version = "0.14.4", features=["auto-initialize", "multiple-pymethods", "extension-module"]}
aorist_util = {path = "../aorist_util", version = "0.0.1"}
aorist_primitives = {path = "../aorist_primitives", features=[], version = "0.0.14"}
aorist_paste = "0.0.1"

[build-dependencies]
pyo3-build-config = "0.14.4"
aorist_util = {path = "../aorist_util", version = "0.0.1"}

[lib]
name="constraint_module"
crate-type = ["cdylib"]
