[package]
name = "gitea"
version = "0.2.0"
authors = ["Christine Dodrill <me@christine.website>"]
edition = "2018"
homepage = "https://tulpa.dev/cadey/gitea-release/src/branch/main/gitea"
repository = "https://tulpa.dev/cadey/gitea-release"
keywords = ["gitea", "api", "http"]
license = "MIT"
readme = "README.md"
description = "A Gitea client for Rust programs."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
reqwest = { version = "0.10", features = ["json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
anyhow = "1"
tokio = { version = "0.2", features = ["macros"] }
