[package]
name = "scienz"
description = "Core abstractions the aorist project"
license = "MIT"
version = "0.0.14"
authors = ["Bogdan State <bogdan@scie.nz>"]
edition = "2018"
homepage = "https://aorist.io"
readme = false
repository = "https://github.com/scie-nz/aorist"
build = "build.rs"

[lib]
name = "scienz"
path = "src/lib.rs"

[features]
python = ["aorist_primitives/python", "aorist_util/python", "aorist_attributes/python", "pyo3"]
r = ["aorist_extendr-api", "aorist_extendr-engine"]
sql = ["sqlformat", "sqlparser"]
default = []

[dependencies]
Inflector = "0.11.4"
abi_stable = "0.10.3"
anyhow = "1.0"
aorist_attributes = {path = "../aorist_attributes", version = "0.0.14"}
aorist_concept = {path = "../aorist_concept", version = "0.0.1"}
aorist_derive = {path = "../aorist_derive", version = "0.0.1"}
aorist_primitives = {path = "../aorist_primitives", version = "0.0.14"}
aorist_util = {path = "../aorist_util", version = "0.0.1"}
base64 = "0.13.0"
derivative = "2.1.1"
enum_dispatch = "0.3.5"
linked-hash-map = "0.5.3"
linked_hash_set = "0.1.4"
num = {version="0.4.0", features = ["std"]}
ordered-float = "2.1.1"
aorist_paste = "0.0.1"
rand = "^0.8"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "^1.0"
serde_yaml = "0.8"
siphasher = "0.3"
tracing = "0.1"
libR-sys = {version = "0.2.2", features = ["use-bindgen"]}
uuid = {version = "0.8.1", features = ["v4", "serde"]}
pyo3 = {version = "0.15.1", features=["auto-initialize", "multiple-pymethods"], optional = true}
aorist_extendr-api = {version = "0.0.1", optional = true}
aorist_extendr-engine = {version = "0.0.1", optional = true}
sqlformat = {version = "0.1.5", optional = true}
sqlparser = {version = "0.9.0", optional = true}
thiserror = "^1.0"

[build-dependencies]
toml = "0.5.8"
serde = { version = "1.0", features = ["derive"] }
codegen = "0.1.3"
