[package]
name = "type_macro_helpers"
version = "0.1.0"
authors = ["Bogdan State <bogdan@scie.nz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro-error = "1.0"
proc-macro2 = { version = "1", default-features = false }
quote = "1"
syn = {version = "1", features = ["full"]}
thiserror = "^1.0"
